Closed Bug 369627 Opened 18 years ago Closed 18 years ago

WinLaunchChild elevation code breaks xulstub building

Categories

(Toolkit Graveyard :: XULRunner, defect)

1.8 Branch
x86
Windows XP
defect
Not set
major

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: mrtech, Assigned: mrtech)

References

Details

(Keywords: fixed1.8.1.2)

Attachments

(2 files, 2 obsolete files)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.1.1) Gecko/20061204 eMusic DLM/4 Firefox/2.0.0.1 Build Identifier: This code breaks xulstub compiling on windows: http://bonsai.mozilla.org/cvsview2.cgi?diff_mode=context&whitespace_mode=show&root=/cvsroot&subdir=mozilla/toolkit/xre&command=DIFF_FRAMESET&root=/cvsroot&file=nsWindowsRestart.cpp&rev1=1.1.4.2&rev2=1.1.4.3 nsXULStub.cpp has 3 params: http://lxr.mozilla.org/mozilla1.8/source/xulrunner/stub/nsXULStub.cpp#203 nsWindowsRestart now has 4 params: http://lxr.mozilla.org/mozilla1.8/source/toolkit/xre/nsWindowsRestart.cpp#254 Reproducible: Always Steps to Reproduce: 1. try building xulrunner 1.8 branch 2. 3. Actual Results: Building deps for /cygdrive/c/mozilla/xulrunner/stub/nsXULStub.cpp /cygdrive/c/mozilla/build/cygwin-wrapper cl -FonsXULStub.obj -c -DXPCOM_GLUE -DOSTYPE=\"WINNT5.1\" -DOSARCH=\"WINNT\" -DBUILD_ID=0000000000 -I/cygdrive/c/mozilla/xpcom/build -I/cygdrive/c/mozilla/toolkit/xre -I../../dist/include/xpcom -I../../dist/include/xulrunner -I../../dist/ include -I../../dist/include/nspr -I../../dist/sdk/include -TP -nologo -W3 -Gy -FdnsXULStub.pdb -DNDEBUG -DTRIMMED -O1 -MD -DX_DISPLAY_MISSING=1 -DMOZILLA_VERSION=\"1.8.1.2pre\" -DMOZILLA_VERSION_U=1.8.1.2pre -DHAVE_SNPRINTF=1 -D_WINDOWS=1 -D_WIN32=1 -DWIN32= 1 -DXP_WIN=1 -DXP_WIN32=1 -DHW_THREADS=1 -DWINVER=0x400 -D_WIN32_WINNT=0x400 -DSTDC_HEADERS=1 -DWIN32_LEAN_AND_MEAN=1 -DNO_X11=1 -D_X86_=1 - DD_INO=d_ino -DMOZ_DEFAULT_TOOLKIT=\"windows\" -DMOZ_XULRUNNER=1 -DMOZ_BUILD_APP=xulrunner -DMOZ_XUL_APP=1 -DMOZ_DISTRIBUTION_ID=\"org.mozil la\" -DOJI=1 -DIBMBIDI=1 -DMOZ_VIEW_SOURCE=1 -DMOZ_XPINSTALL=1 -DMOZ_JSLOADER=1 -DMOZ_XTF=1 -DMOZ_UPDATE_CHANNEL=default -DMOZ_FEEDS=1 -DMOZ _STORAGE=1 -DMOZ_LOGGING=1 -DMOZ_USER_DIR=\"Mozilla\" -DMOZ_ENABLE_LIBXUL=1 -DMOZ_XUL=1 -DMOZ_PROFILELOCKING=1 -DMOZ_MORK=1 -DMOZ_DLL_SUFFIX =\".dll\" -DJS_THREADSAFE=1 -DMOZILLA_1_8_BRANCH=1 -DMOZILLA_LOCALE_VERSION=\"1.8.1\" -DMOZILLA_REGION_VERSION=\"1.8.1\" -DMOZILLA_SKIN_VERS ION=\"1.8\" -D_MOZILLA_CONFIG_H_ -DMOZILLA_CLIENT /cygdrive/c/mozilla/xulrunner/stub/nsXULStub.cpp nsXULStub.cpp c:/mozilla/xulrunner/stub/nsXULStub.cpp(203) : error C2660: 'WinLaunchChild' : function does not take 3 parameters make[4]: *** [nsXULStub.obj] Error 2 make[4]: Leaving directory `/cygdrive/c/mozilla/obj-xulrunner/xulrunner/stub' make[3]: *** [libs] Error 2 make[3]: Leaving directory `/cygdrive/c/mozilla/obj-xulrunner/xulrunner' make[2]: *** [tier_99] Error 2 make[2]: Leaving directory `/cygdrive/c/mozilla/obj-xulrunner' make[1]: *** [alldep] Error 2 make[1]: Leaving directory `/cygdrive/c/mozilla/obj-xulrunner' make: *** [alldep] Error 2 make: Leaving directory `/cygdrive/c/mozilla' Expected Results: just compiles
Assignee: nobody → robert.bugzilla
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Attachment #254337 - Flags: first-review?(sspitzer)
Attachment #254337 - Flags: approval1.8.1.2?
Comment on attachment 254337 [details] [diff] [review] patch - branch only Approved for 1.8 branch, a= jay (rstrong says he'll get an r= from sspitzer)
Attachment #254337 - Flags: approval1.8.1.2? → approval1.8.1.2+
Comment on attachment 254337 [details] [diff] [review] patch - branch only r=me
Attachment #254337 - Flags: first-review?(sspitzer) → first-review+
Comment on attachment 254337 [details] [diff] [review] patch - branch only r=sspitzer
Attachment #254337 - Flags: second-review+
Fixed on MOZILLA_1_8_BRANCH
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Keywords: fixed1.8.1.2
Resolution: --- → FIXED
Version: unspecified → 1.8 Branch
now getting the following error: Building deps for /cygdrive/c/mozilla/xulrunner/stub/nsXULStub.cpp /cygdrive/c/mozilla/build/cygwin-wrapper cl -FonsXULStub.obj -c -DXPCOM_GLUE -DOSTYPE=\"WINNT5.1\" -DOSARCH=\"WINNT\" -DBUILD_ID=0000000000 -I/cygdrive/c/mozilla/xpcom/build -I/cygdrive/c/mozilla/toolkit/xre -I../../dist/include/xpcom -I../../dist/include/xulrunner -I../../dist/ include -I../../dist/include/nspr -I../../dist/sdk/include -TP -nologo -W3 -Gy -FdnsXULStub.pdb -DNDEBUG -DTRIMMED -O1 -MD -DX_DISPLAY_MISSING=1 -DMOZILLA_VERSION=\"1.8.1.2pre\" -DMOZILLA_VERSION_U=1.8.1.2pre -DHAVE_SNPRINTF=1 -D_WINDOWS=1 -D_WIN32=1 -DWIN32= 1 -DXP_WIN=1 -DXP_WIN32=1 -DHW_THREADS=1 -DWINVER=0x400 -D_WIN32_WINNT=0x400 -DSTDC_HEADERS=1 -DWIN32_LEAN_AND_MEAN=1 -DNO_X11=1 -D_X86_=1 - DD_INO=d_ino -DMOZ_DEFAULT_TOOLKIT=\"windows\" -DMOZ_XULRUNNER=1 -DMOZ_BUILD_APP=xulrunner -DMOZ_XUL_APP=1 -DMOZ_DISTRIBUTION_ID=\"org.mozil la\" -DOJI=1 -DIBMBIDI=1 -DMOZ_VIEW_SOURCE=1 -DMOZ_XPINSTALL=1 -DMOZ_JSLOADER=1 -DMOZ_XTF=1 -DMOZ_UPDATE_CHANNEL=default -DMOZ_FEEDS=1 -DMOZ _STORAGE=1 -DMOZ_LOGGING=1 -DMOZ_USER_DIR=\"Mozilla\" -DMOZ_ENABLE_LIBXUL=1 -DMOZ_XUL=1 -DMOZ_PROFILELOCKING=1 -DMOZ_MORK=1 -DMOZ_DLL_SUFFIX =\".dll\" -DJS_THREADSAFE=1 -DMOZILLA_1_8_BRANCH=1 -DMOZILLA_LOCALE_VERSION=\"1.8.1\" -DMOZILLA_REGION_VERSION=\"1.8.1\" -DMOZILLA_SKIN_VERS ION=\"1.8\" -D_MOZILLA_CONFIG_H_ -DMOZILLA_CLIENT /cygdrive/c/mozilla/xulrunner/stub/nsXULStub.cpp nsXULStub.cpp c:/mozilla/xulrunner/stub/nsXULStub.cpp(69) : warning C4101: 'tmpPath' : unreferenced local variable /usr/bin/perl /cygdrive/c/mozilla/config/version_win.pl -QUIET 1 -DEPTH ../.. -TOPSRCDIR /cygdrive/c/mozilla -BITS 32 -OBJDIR . -SRCDIR /cyg drive/c/mozilla/xulrunner/stub -DISPNAME XULRunner -MODNAME xulrunner -BINARY xulrunner-stub.exe Creating Resource file: module.res /cygdrive/c/mozilla/build/cygwin-wrapper rc.exe -r -DXPCOM_GLUE -DOSTYPE=\"WINNT5.1\" -DOSARCH=\"WINNT\" -DBUILD_ID=0000000000 -I/cygdrive/ c/mozilla/xpcom/build -I/cygdrive/c/mozilla/toolkit/xre -I../../dist/include/xpcom -I../../dist/include/xulrunner -I../../dist/include -I../ ../dist/include/nspr -I../../dist/sdk/include -Fomodule.res /cygdrive/c/mozilla/obj-xulrunner/xulrunner/stub/module.rc /cygdrive/c/mozilla/build/cygwin-wrapper link -NOLOGO -OUT:xulrunner-stub.exe -PDB:xulrunner-stub.pdb -SUBSYSTEM:WINDOWS nsXULStub.obj ./ module.res ../../dist/lib/xpcomglue.lib kernel32.lib user32.lib gdi32.lib winmm.lib wsock32.lib advapi32.lib Creating library xulrunner-stub.lib and object xulrunner-stub.exp nsXULStub.obj : error LNK2001: unresolved external symbol __imp__ShellExecuteA@24 xulrunner-stub.exe : fatal error LNK1120: 1 unresolved externals make[4]: *** [xulrunner-stub.exe] Error 96 make[4]: Leaving directory `/cygdrive/c/mozilla/obj-xulrunner/xulrunner/stub' make[3]: *** [libs] Error 2 make[3]: Leaving directory `/cygdrive/c/mozilla/obj-xulrunner/xulrunner' make[2]: *** [tier_99] Error 2 make[2]: Leaving directory `/cygdrive/c/mozilla/obj-xulrunner' make[1]: *** [alldep] Error 2 make[1]: Leaving directory `/cygdrive/c/mozilla/obj-xulrunner' make: *** [alldep] Error 2 make: Leaving directory `/cygdrive/c/mozilla'
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Reassigning to default since I won't have time to patch this for a couple of days
Assignee: robert.bugzilla → nobody
Status: REOPENED → NEW
Keywords: fixed1.8.1.2
mook, helped me with this so my urgency has been abated as all builds well now, thanks.
patch - branch only
Attachment #254534 - Flags: first-review?(mrtech)
Mel: you need to put your desired reviewer's email address in the requestee field, not your own. I suggest ted.mielczarek, since Benjamin is away at the moment.
yeah, wasn't sure how that worked, "requestee" was a little misleading, thanks.
Attachment #254534 - Flags: first-review?(mrtech) → first-review?(ted.mielczarek)
Comment on attachment 254534 [details] [diff] [review] added shell32 lib reference to get xulrunner to build again Stick the OS_LIBS line in the same ifeq block as the LOCAL_INCLUDES line below it. With that, r=me
Attachment #254534 - Flags: first-review?(ted.mielczarek) → first-review+
Attachment #254534 - Attachment is obsolete: true
Attached patch revised with changes requested. (obsolete) — Splinter Review
Attachment #254604 - Flags: first-review+
Whiteboard: [checkin needed]
This doesn't apply; and it looks like bsmedberg checked in this change (albeit in a separate block) as a bustage fix for bug 351949: http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/xulrunner/stub/Makefile.in&rev=1.7&mark=92-95#92
Whiteboard: [checkin needed]
Bah, the reason it did not apply is that you didn't diff from the mozilla/ dir, which you should do for ease of patching. My other point stands though.
(In reply to comment #15) > This doesn't apply; and it looks like bsmedberg checked in this change (albeit > in a separate block) as a bustage fix for bug 351949: > > http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/xulrunner/stub/Makefile.in&rev=1.7&mark=92-95#92 > it appear that my patch isn't needed, but when I resync with cvs the changes still aren't coming through and I have to reapply my patch. Has the patch above officially been checked in for 1.8 branch?
Attachment #254604 - Attachment is obsolete: true
Attachment #254888 - Flags: first-review+
Comment on attachment 254888 [details] [diff] [review] updated diff from mozilla root - 1.8 branch only Requesting 1.8.1.2 for an XULRunner only patch
Attachment #254888 - Flags: approval1.8.1.2?
Comment on attachment 254888 [details] [diff] [review] updated diff from mozilla root - 1.8 branch only a=dveditz for 1.8 branch
Attachment #254888 - Flags: approval1.8.1.2? → approval1.8.1.2+
Checked in to MOZILLA_1_8_BRANCH
Status: NEW → RESOLVED
Closed: 18 years ago18 years ago
Keywords: fixed1.8.1.2
Resolution: --- → FIXED
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Assignee: nobody → mrtech
Status: REOPENED → NEW
Status: NEW → RESOLVED
Closed: 18 years ago18 years ago
Resolution: --- → FIXED
QA could use some help on steps to verify this fix. Thanks.
(In reply to comment #22) > QA could use some help on steps to verify this fix. Thanks. You would have to build xulrunner since this bug is about building xulrunner being broken
Product: Toolkit → Toolkit Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: