Bug 369627: WinLaunchChild elevation code breaks xulstub building. r=sspitzer, a1.8.1.2=